--- a/index.html
+++ b/index.html
@@ -4,9 +4,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RESUME-Prethivee</title>
+    <title>My Resume</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			background-color: #f5f5f5;
+			color: #1f1f1f;
+			margin: 0;
+			padding: 0;
+		}
+		header {
+			background-color: #333333;
+			color: #ffffff;
+			padding: 30px;
+			text-align: center;
+		}
+		h1, h2, h3 {
+			margin: 0;
+		}
+		h1 {
+			font-size: 36px;
+		}
+		h2 {
+			font-size: 24px;
+			margin-top: 20px;
+		}
+		h3 {
+			font-size: 20px;
+			margin-top: 15px;
+		}
+		p {
+			font-size: 16px;
+			line-height: 1.5;
+			margin-top: 0;
+			margin-bottom: 10px;
+		}
+		section {
+			margin: 40px 0;
+			padding: 0 30px;
+		}
+		section:first-of-type {
+			margin-top: 0;
+		}
+		ul {
+			list-style: none;
+			padding: 0;
+			margin: 0;
+		}
+		li {
+			margin-bottom: 10px;
+		}
+		li:last-of-type {
+			margin-bottom: 0;
+		}
+	</style>
 </head>
 <body>
-    
+	<header>
+		<h1>Prethiveerajan P</h1>
+		<h2>GAME DEVELOPER</h2>
+		<img src="assest/o1.jfif" alt="HTML" width="350" height="250" style="padding-left: 60%;">
+	</header>
+	<section>
+		<h3>Summary</h3>
+		<p>A highly motivated Learner  with technical Knowledege</p>
+	</section>
+	<section>
+		<h3>Skills</h3>
+		<ul>
+			<li>Unreal</li>
+			<li>unity</li>
+			<li>maya</li>
+			<li>tensorflow</li>
+			<li>autodesk fusion 360</li>
+			<li>C#</li>
+			<li>C++</li>
+		</ul>
+	</section>
+	<section>
+		<h3> NO  Experience</h3>
+		
+	</section>
+	<section>
+		<h3>Education</h3>
+		<h4>Bachelor of Technolgy in Datascience, University of Saveetha</h4>
+	
+	</section>
 </body>
-</html>
+<section>
+	<h3>Contact Information</h3>
+	<ul>
+		<li>Email: prethiveeran40@gmail.com</li>
+		<li>Phone: 6369687443</li>
+	</ul>
+</section>
+<footer>
+	<ul>
+		<li><a href="https://www.linkedin.com/in/john-doe/">LinkedIn</a></li>
+		<li><a href="https://github.com/john-doe">GitHub</a></li>
+		<li><a href="https://twitter.com/johndoe">Twitter</a></li>
+	</ul>
+</footer>
+
