--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF- 8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
@@ -100,9 +100,9 @@
 </section>
 <footer>
 	<ul>
-		<li><a href="https://www.linkedin.com/in/john-doe/">LinkedIn</a></li>
-		<li><a href="https://github.com/john-doe">GitHub</a></li>
-		<li><a href="https://twitter.com/johndoe">Twitter</a></li>
+		
+		<li><a href="https://github.com/Prethiveerajan">GitHub</a></li>
+		<li><a href="https://twitter.com/PrethiveeR">Twitter</a></li>
 	</ul>
 </footer>
 
