edited the code from inline css to external css

--- a/index.html
+++ b/index.html
@@ -4,66 +4,15 @@
     <meta charset="UTF- 8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>My Resume</title>
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-			background-color: #f5f5f5;
-			color: #1f1f1f;
-			margin: 0;
-			padding: 0;
-		}
-		header {
-			background-color: #333333;
-			color: #ffffff;
-			padding: 30px;
-			text-align: center;
-		}
-		h1, h2, h3 {
-			margin: 0;
-		}
-		h1 {
-			font-size: 36px;
-		}
-		h2 {
-			font-size: 24px;
-			margin-top: 20px;
-		}
-		h3 {
-			font-size: 20px;
-			margin-top: 15px;
-		}
-		p {
-			font-size: 16px;
-			line-height: 1.5;
-			margin-top: 0;
-			margin-bottom: 10px;
-		}
-		section {
-			margin: 40px 0;
-			padding: 0 30px;
-		}
-		section:first-of-type {
-			margin-top: 0;
-		}
-		ul {
-			list-style: none;
-			padding: 0;
-			margin: 0;
-		}
-		li {
-			margin-bottom: 10px;
-		}
-		li:last-of-type {
-			margin-bottom: 0;
-		}
-	</style>
+	
 </head>
 <body>
 	<header>
 		<h1>Prethiveerajan P</h1>
-		<h2>GAME DEVELOPER</h2>
-		<img src="assest/o1.jfif" alt="HTML" width="350" height="250" style="padding-left: 60%;">
+		<h2>ROLE :GAME DEVELOPER</h2>
+		<img src="assests/images/o1.jfif" alt="HTML" style="width: 100px; height: 100px; border-radius: 50%; padding: left 100px;">
 	</header>
 	<section>
 		<h3>Summary</h3>
@@ -101,8 +50,8 @@
 <footer>
 	<ul>
 		
-		<li><a href="https://github.com/Prethiveerajan">GitHub</a></li>
-		<li><a href="https://twitter.com/PrethiveeR">Twitter</a></li>
+		<li><a href="https://github.com/Prethiveerajan"> <br> GitHub</a></li>
+		<li><a href="https://twitter.com/PrethiveeR">  😂 Twitter</a></li>
 	</ul>
 </footer>
 
