--- a/index.html
+++ b/index.html
@@ -1,57 +1,51 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF- 8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>My Resume</title>
-	
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resume</title>
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resume</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/new.css">
 </head>
 <body>
-	<header>
-		<h1>Prethiveerajan P</h1>
-		<h2>ROLE :GAME DEVELOPER</h2>
-		<img src="assests/images/o1.jfif" alt="HTML" style="width: 100px; height: 100px; border-radius: 50%; padding: left 100px;">
-	</header>
-	<section>
-		<h3>Summary</h3>
-		<p>A highly motivated Learner  with technical Knowledege</p>
-	</section>
-	<section>
-		<h3>Skills</h3>
-		<ul>
-			<li>Unreal</li>
-			<li>unity</li>
-			<li>maya</li>
-			<li>tensorflow</li>
-			<li>autodesk fusion 360</li>
-			<li>C#</li>
-			<li>C++</li>
-		</ul>
-	</section>
-	<section>
-		<h3> NO  Experience</h3>
-		
-	</section>
-	<section>
-		<h3>Education</h3>
-		<h4>Bachelor of Technolgy in Datascience, University of Saveetha</h4>
-	
-	</section>
+  <div id="resume">
+    <img src="/prethivee.jpg" alt="Prethivee">
+    <h1>PrethiveeRajan P</h1>
+    <p>Cell: <a href=#>6369687443</a>
+    <p>Web: <a href=#>Prethivee.com</a>
+    <p>Email: <a href=#>prethiveerajan40@gmail.com</a>
+    <p id="objective">I am a reserved but ambitious young professional seeking a career that fits my professional skills, personality highly motivated Learner  with technical Knowledege</p>
+    <dt>Education
+    <dd>
+      <h2>Saveetha University</h2>
+      <p><strong>Major:</strong>Data Science<br/>
+      <strong>Minor:</strong>Game Development</p>
+  </dl>
+  <dl>
+  <dt>Skills
+    
+  <dd>
+  <h2>Office Skills</h2>
+  <p>AUTODESK FUSION,UNITY,MAYA,UNREAL</p>  
+  </ul>
+  <p>Office and records management, database administration, event organization, customer support, travel coordination
+  <h2>Computer skills</h2>
+  <p>Microsoft productivity software (Word, Excel, etc), Adobe Creative Suite, Windows
+  </dl>
+  <dl>
+  <dt>Hobbies
+  <dd>World domination, Social Manipulation,Books Reading
+  </dl>
+  <dl>
+  <dt>References
+  <dd>Available on request
+  </dl>
+
+  </div>
+  
 </body>
-<section>
-	<h3>Contact Information</h3>
-	<ul>
-		<li>Email: prethiveeran40@gmail.com</li>
-		<li>Phone: 6369687443</li>
-	</ul>
-</section>
-<footer>
-	<ul>
-		
-		<li><a href="https://github.com/Prethiveerajan"> <br> GitHub</a></li>
-		<li><a href="https://twitter.com/PrethiveeR">  😂 Twitter</a></li>
-	</ul>
-</footer>
+
 
